--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Detection</string>
+
+    <string name="app_name">GrayProcess</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="str_proc">gray process</string>
+    <string name="str_desc">image description</string>
+    <string name="str_open">Open</string>
+    <string name="str_close">Close</string>
 </resources>
